--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <title>Store</title>
 </head>
 <body>
+<div>
+    <h2>Todo List</h2>
+    <input type="text" id="todo" placeholder="Add todo">
+    <button id="todoBtn">Add Todo</button>
+    <ul id="todos"></ul>
+</div>
+
+<div>
+    <h2>Goals</h2>
+    <input type="text" id="goal" placeholder="Add goal">
+    <button id="goalBtn">Add Goal</button>
+    <ul id="goals"></ul>
+</div>
 
 <script src="index.js"></script>
 </body>
