--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <ul id="goals"></ul>
 </div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.0.1/redux.min.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
