--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
     <ul id="goals"></ul>
 </div>
 
+<hr>
+
+<div id='app'></div>
+
+<script src='https://unpkg.com/react@16.3.0-alpha.1/umd/react.development.js'></script>
+<script src='https://unpkg.com/react-dom@16.3.0-alpha.1/umd/react-dom.development.js'></script>
+<script src='https://unpkg.com/babel-standalone@6.15.0/babel.min.js'></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.0.1/redux.min.js"></script>
 <script src="index.js"></script>
+<script type="text/babel" src="react.js"></script>
 </body>
 </html>
