--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <script src='https://unpkg.com/babel-standalone@6.15.0/babel.min.js'></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.0.1/redux.min.js"></script>
 <script src="https://tylermcginnis.com/goals-todos-api/index.js"></script>
+<script src='https://unpkg.com/redux-thunk@2.2.0/dist/redux-thunk.min.js'></script>
 <script src="index.js"></script>
 <script type="text/babel" src="react.js"></script>
 </body>
